add hero markap and styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,8 +51,7 @@ textarea {
 .container {
   /* max-width: 1150px; */
   max-width: 410px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 50px 20px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -68,6 +67,8 @@ textarea {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .page-header {
@@ -81,7 +82,7 @@ textarea {
 .page-logo {
   font-weight: 700;
   font-size: 30px;
-  line-height: 0.93333;
+  line-height: 0.93;
   color: #173a56;
   display: inline-flex;
   align-items: center;
@@ -100,3 +101,68 @@ textarea {
   background-color: inherit;
 }
 /*============================== /HEADER STYLES ==============================*/
+
+/*============================== HERO STYLES ==============================*/
+.hero-section .container {
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+
+.hero-img {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+
+.hero-title {
+  max-width: 369px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.67;
+  margin-bottom: 16px;
+}
+
+.hero-text {
+  max-width: 326px;
+  font-size: 18px;
+  line-height: 1.56;
+  text-align: center;
+  margin-bottom: 32px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero-btn-list {
+  display: flex;
+  gap: 28px;
+  align-items: baseline;
+  max-width: 345px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.get-started-btn {
+  padding: 17px 25px;
+  font-weight: 700;
+  font-size: 16px;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  background-color: #02897a;
+}
+
+.watch-video-btn {
+  border: none;
+  font-weight: 600;
+  font-size: 16px;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #02897a;
+  background-color: inherit;
+}
+
+.watch-video-icon {
+  margin-right: 4px;
+}
+/*============================== /HERO STYLES ==============================*/
