add benefits section markup

--- a/css/styles.css
+++ b/css/styles.css
@@ -219,3 +219,28 @@ textarea {
   background-color: #02897a;
 }
 /*============================== /PRODUCT STYLES ==============================*/
+
+/*============================== BENEFITS STYLES ==============================*/
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.benefits-list {
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+}
+
+.benefits-img {
+  margin: 0 auto;
+}
+/*============================== /BENEFITS STYLES ==============================*/
