--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,12 @@ textarea {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.section-title {
+  font-weight: 700;
+  font-size: 32px;
+  text-align: center;
+}
 /*============================== /COMMON STYLES ==============================*/
 
 /*============================== HEADER STYLES ==============================*/
@@ -117,6 +123,12 @@ textarea {
   align-items: center;
   border: none;
   background-color: inherit;
+  transition: fill 300ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.mobile-menu-btn:hover,
+.mobile-menu-btn:focus {
+  fill: #02897a;
 }
 /*============================== /HEADER STYLES ==============================*/
 
@@ -168,6 +180,12 @@ textarea {
   border: none;
   border-radius: 4px;
   background-color: #02897a;
+  transition: background-color 300ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.get-started-btn:hover,
+.get-started-btn:focus {
+  background-color: #028910;
 }
 
 .watch-video-btn {
@@ -178,6 +196,27 @@ textarea {
   text-decoration-skip-ink: none;
   color: #02897a;
   background-color: inherit;
+  padding: 15px 6px;
+  border-radius: 4px;
+  border: none;
+  transition: background-color 300ms cubic-bezier(0.19, 1, 0.22, 1),
+    color 300ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.watch-video-btn:hover,
+.watch-video-btn:focus {
+  background-color: #028910;
+  color: #ffffff;
+}
+
+.watch-video-icon {
+  fill: #02897a;
+  transition: fill 300ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.watch-video-btn:hover .watch-video-icon,
+.watch-video-btn:focus .watch-video-icon {
+  fill: #ffffff;
 }
 
 .watch-video-icon {
@@ -186,11 +225,8 @@ textarea {
 /*============================== /HERO STYLES ==============================*/
 
 /*============================== PRODUCT STYLES ==============================*/
-.product-list-main-title {
+.product-main-title {
   margin-top: 16px;
-  font-weight: 700;
-  font-size: 32px;
-  text-align: center;
   margin-bottom: 50px;
 }
 
@@ -230,7 +266,14 @@ textarea {
   border: none;
   border-radius: 4px;
   background-color: #02897a;
+  transition: background-color 300ms cubic-bezier(0.19, 1, 0.22, 1);
 }
+
+.product-btn:hover,
+.product-btn:focus {
+  background-color: #028910;
+}
+
 /*============================== /PRODUCT STYLES ==============================*/
 
 /*============================== BENEFITS STYLES ==============================*/
@@ -270,11 +313,6 @@ textarea {
   gap: 16px;
 }
 
-.management-item {
-  height: 90px;
-  overflow: auto;
-}
-
 .management-title {
   font-weight: 600;
   font-size: 16px;
@@ -286,4 +324,88 @@ textarea {
   font-size: 16px;
   line-height: 1.63;
 }
+
+.support-list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 352px;
+}
+
+.support-item {
+  display: flex;
+  gap: 30px;
+}
+
+.support-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8px;
+}
+
+.support-text {
+  max-width: 287px;
+  font-size: 16px;
+  line-height: 1.63;
+}
 /*============================== /BENEFITS STYLES ==============================*/
+
+/*========================== PROCESS SECTION STYLES ===========================*/
+.process-main-title {
+  margin-bottom: 8px;
+}
+
+.process-main-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.process-list {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  width: 348px;
+  margin: 0 auto;
+  margin-bottom: 32px;
+}
+
+.process-item {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.process-text {
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  color: #2f281e;
+  border-radius: 35px;
+  max-width: 220px;
+  padding: 12px 24px;
+  box-shadow: 2px 2px 10px 0 rgba(23, 58, 86, 0.15);
+}
+
+.process-btn {
+  font-weight: 700;
+  font-size: 16px;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  width: 216px;
+  height: 53px;
+  background-color: #02897a;
+  display: block;
+  margin: 0 auto;
+  transition: background-color 300ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.process-btn:hover,
+.process-btn:focus {
+  background-color: #028910;
+}
+/*========================== /PROCESS SECTION STYLES ===========================*/
