--- a/css/styles.css
+++ b/css/styles.css
@@ -616,21 +616,66 @@ textarea {
 /*======================= /PRICE SECTION STYLES ========================*/
 
 /*========================== REVIEW SECTION ==========================*/
+.review-title {
+  font-size: 34px;
+  line-height: 1.7;
+  letter-spacing: 0.01em;
+  margin-bottom: 8px;
+}
+
 .review-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.75;
+  letter-spacing: 0.01em;
+  text-align: center;
+  max-width: 323px;
+  margin: 0 auto 32px;
 }
 .review-list {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 32px;
 }
 .review-item {
+  padding: 28px 26px 24px;
+  border: 1px solid #dedede;
+  border-radius: 5px;
+  max-width: 327px;
 }
 .review-icon {
+  margin-bottom: 16px;
 }
 .review-list-text {
+  font-size: 16px;
+  line-height: 1.75;
+  letter-spacing: 0.01em;
+  color: #32454f;
+  margin-bottom: 16px;
+}
+
+.review-name-container {
+  display: flex;
+  max-width: 145px;
 }
 .review-img {
+  margin-right: 14px;
 }
+
 .review-name-title {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.01em;
+  color: #02897a;
 }
 .review-name-text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.01em;
+  color: #252b42;
 }
 /*========================== /REVIEW SECTION ==========================*/
 
