--- a/css/styles.css
+++ b/css/styles.css
@@ -801,6 +801,12 @@ textarea {
   margin-bottom: 34px;
 }
 
+.pnone-input-wrap {
+  position: relative;
+  width: 325px;
+  margin: 0 auto 21px;
+}
+
 .footer-input {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
@@ -809,24 +815,33 @@ textarea {
   outline: none;
   border: 1px solid #bcd0e5;
   border-radius: 4px;
-  width: 325px;
+  width: 100%;
   height: 48px;
   display: block;
   background-color: transparent;
-  padding: 4px 8px;
-  margin: 0 auto 21px;
+  padding-left: 42px;
   transition: border 250ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .footer-input::placeholder {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  color: #111111;
+  line-height: 1.75;
+  color: #02897a;
 }
 
 .footer-input:focus {
   border: 2px solid #02897a;
+}
+
+.phone-input-icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 12px;
+  transition: fill 250ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.footer-input:focus + .phone-input-icon {
+  fill: #02897a;
 }
 
 .footer-submit-btn {
@@ -858,7 +873,6 @@ textarea {
   line-height: 1.88;
   text-align: center;
 }
-
 /*========================== /FOOTER ==========================*/
 
 /*============================== /MOBILE STYLES ==============================*/
