--- a/css/styles.css
+++ b/css/styles.css
@@ -80,9 +80,9 @@ textarea {
 }
 /*============================== /COMMON STYLES ==============================*/
 
-/*============================== MOBILE STYLES ==============================*/
-
 /*============================== HEADER STYLES ==============================*/
+
+/*============================== MOBILE STYLES ==============================*/
 .menu-list,
 .header-login-btns {
   display: none;
@@ -113,7 +113,7 @@ textarea {
   align-items: center;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1149px) {
   .header-logo {
     padding: 21px 0;
   }
@@ -135,6 +135,95 @@ textarea {
 .mobile-menu-btn:focus {
   fill: #02897a;
 }
+/*============================== /MOBILE STYLES ==============================*/
+
+/*============================== DESKTOP STYLES ==============================*/
+@media screen and (min-width: 1150px) {
+  .container {
+    max-width: 1150px;
+    padding: 0 20px;
+  }
+
+  .mobile-menu-btn {
+    display: none;
+  }
+
+  .menu {
+    display: flex;
+    align-items: center;
+  }
+
+  .header-logo {
+    margin-right: 237px;
+  }
+
+  .menu-list {
+    display: flex;
+    gap: 30px;
+  }
+
+  .menu-link {
+    display: block;
+    line-height: 1.75;
+    padding-top: 26px;
+    padding-bottom: 26px;
+    transition: color 1200ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+
+  .menu-link:hover,
+  .menu-link:focus {
+    color: #02897a;
+  }
+
+  .current {
+    font-weight: 600;
+  }
+
+  .header-login-btns {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+  }
+
+  .sign-btn {
+    background-color: transparent;
+    padding: 0;
+    border: 1px solid #bcd0e5;
+    border-radius: 4px;
+    width: 102px;
+    height: 42px;
+    font-weight: 600;
+    text-align: center;
+    color: #173a56;
+    transition: color 1200ms cubic-bezier(0.19, 1, 0.22, 1),
+      background-color 1200ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+
+  .sign-btn:hover,
+  .sign-btn:focus {
+    background-color: #02897a;
+    color: #ffffff;
+  }
+
+  .black-mode-btn {
+    border: none;
+    background-color: #ffffff;
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 1200ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+
+  .black-mode-btn:hover,
+  .black-mode-btn:focus {
+    background-color: #02897a;
+  }
+}
+/*============================== /DESKTOP STYLES ==============================*/
+
 /*============================== /HEADER STYLES ==============================*/
 
 /*============================== HERO STYLES ==============================*/
@@ -874,5 +963,3 @@ textarea {
   text-align: center;
 }
 /*========================== /FOOTER ==========================*/
-
-/*============================== /MOBILE STYLES ==============================*/
