--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,13 @@ textarea {
   text-align: center;
   margin-bottom: 104px;
 }
+
+@media screen and (min-width: 1150px) {
+  .container {
+    max-width: 1150px;
+    padding: 0 20px;
+  }
+}
 /*============================== /COMMON STYLES ==============================*/
 
 /*============================== HEADER STYLES ==============================*/
@@ -139,11 +146,6 @@ textarea {
 
 /*============================== DESKTOP STYLES ==============================*/
 @media screen and (min-width: 1150px) {
-  .container {
-    max-width: 1150px;
-    padding: 0 20px;
-  }
-
   .mobile-menu-btn {
     display: none;
   }
@@ -227,6 +229,7 @@ textarea {
 /*============================== /HEADER STYLES ==============================*/
 
 /*============================== HERO STYLES ==============================*/
+/*============================== MOBILE ==============================*/
 .hero-section .container {
   padding-top: 30px;
   padding-bottom: 50px;
@@ -271,36 +274,37 @@ textarea {
   padding: 17px 25px;
   font-weight: 700;
   font-size: 16px;
-  color: #fff;
-  border: none;
+  color: #02897a;
+  border: 1px solid #bcd0e5;
   border-radius: 4px;
-  background-color: #02897a;
-  transition: background-color 1200ms cubic-bezier(0.19, 1, 0.22, 1);
+  background-color: #ffffff;
+  transition: background-color 1200ms cubic-bezier(0.19, 1, 0.22, 1),
+    color 1200ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .get-started-btn:hover,
 .get-started-btn:focus {
-  background-color: #028910;
+  background-color: #02897a;
+  color: #ffffff;
 }
 
 .watch-video-btn {
-  border: none;
+  border: 1px solid #bcd0e5;
   font-weight: 600;
   font-size: 16px;
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #02897a;
-  background-color: inherit;
+  background-color: #ffffff;
   padding: 15px 6px;
   border-radius: 4px;
-  border: none;
   transition: background-color 1200ms cubic-bezier(0.19, 1, 0.22, 1),
     color 1200ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .watch-video-btn:hover,
 .watch-video-btn:focus {
-  background-color: #028910;
+  background-color: #02897a;
   color: #ffffff;
 }
 
@@ -317,9 +321,52 @@ textarea {
 .watch-video-icon {
   margin-right: 4px;
 }
+/*============================== /MOBILE ==============================*/
+/*============================== DESKTOP ==============================*/
+@media screen and (min-width: 1150px) {
+  .hero-section {
+    padding-top: 25px;
+  }
+  .hero-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .hero-img {
+    order: 2;
+    width: 610px;
+    height: 555px;
+    margin: 0;
+  }
+
+  .hero-descr {
+    order: 1;
+  }
+
+  .hero-title {
+    font-size: 40px;
+    text-align: left;
+    line-height: 1.5;
+    max-width: 410px;
+  }
+
+  .hero-text {
+    text-align: left;
+    max-width: 465px;
+    margin: 0;
+    margin-bottom: 45px;
+  }
+
+  .hero-btn-list {
+    margin: 0;
+  }
+}
+/*============================== /DESKTOP ==============================*/
 /*============================== /HERO STYLES ==============================*/
 
 /*============================== PRODUCT STYLES ==============================*/
+/*============================== MOBILE ==============================*/
 .product-main-title {
   margin-top: 16px;
   margin-bottom: 50px;
@@ -333,9 +380,35 @@ textarea {
   gap: 32px;
 }
 
-.product-icon {
+.product-item::before {
+  content: '';
+  width: 50px;
+  height: 50px;
+  border-radius: 19px;
   display: block;
   margin: 0 auto 24px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.product-item:nth-child(1)::before {
+  background-color: #02897a;
+  background-image: url(../images/bg-icons/cursor.svg);
+}
+
+.product-item:nth-child(2)::before {
+  background-color: #4d8dff;
+  background-image: url(../images/bg-icons/design.svg);
+}
+
+.product-item:nth-child(3)::before {
+  background-color: #740a76;
+  background-image: url(../images/bg-icons/heart.svg);
+}
+
+.product-item:nth-child(4)::before {
+  background-color: #f03e3d;
+  background-image: url(../images/bg-icons/clock.svg);
 }
 
 .product-title {
@@ -347,7 +420,7 @@ textarea {
 
 .product-text {
   font-size: 16px;
-  line-height: 1.625;
+  line-height: 1.63;
   text-align: center;
 }
 
@@ -358,20 +431,59 @@ textarea {
   font-size: 16px;
   color: #fff;
   padding: 16px 32px;
-  border: none;
+  border: 1px solid #bcd0e5;
   border-radius: 4px;
-  background-color: #02897a;
-  transition: background-color 1200ms cubic-bezier(0.19, 1, 0.22, 1);
+  background-color: #ffffff;
+  color: #02897a;
+  transition: background-color 1200ms cubic-bezier(0.19, 1, 0.22, 1),
+    color 1200ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .product-btn:hover,
 .product-btn:focus {
-  background-color: #028910;
+  background-color: #02897a;
+  color: #ffffff;
 }
+/*============================== /MOBILE ==============================*/
+/*============================== DESKTOP ==============================*/
+@media screen and (min-width: 1150px) {
+  .product-main-title {
+    max-width: 535px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 
+  .product-list {
+    flex-direction: row;
+    max-width: 1110px;
+    gap: 30px;
+    margin-bottom: 50px;
+  }
+
+  .product-item::before {
+    width: 54px;
+    height: 54px;
+    margin: 0 0 26px;
+  }
+
+  .product-item {
+    width: calc((100% - 90px) / 4);
+  }
+
+  .product-title {
+    text-align: left;
+    margin-bottom: 13px;
+  }
+
+  .product-text {
+    text-align: left;
+  }
+}
+/*============================== /DESKTOP ==============================*/
 /*============================== /PRODUCT STYLES ==============================*/
 
 /*============================== BENEFITS STYLES ==============================*/
+/*============================== MOBILE ==============================*/
 .benefits-list {
   display: flex;
   flex-direction: column;
@@ -427,8 +539,32 @@ textarea {
   width: 352px;
 }
 
+.support-item::before {
+  display: block;
+  content: '';
+  width: 35px;
+  height: 35px;
+  border-radius: 14px;
+  background-image: url(../images/bg-icons/check.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.support-item:nth-child(1)::before {
+  background-color: #f90;
+}
+
+.support-item:nth-child(2)::before {
+  background-color: #f03e3d;
+}
+
+.support-item:nth-child(3)::before {
+  background-color: #4d8dff;
+}
+
 .support-item {
   display: flex;
+  align-items: center;
   gap: 30px;
 }
 
@@ -444,9 +580,51 @@ textarea {
   font-size: 16px;
   line-height: 1.63;
 }
+/*============================== /MOBILE ==============================*/
+/*============================== DESKTOP ==============================*/
+@media screen and (min-width: 1150px) {
+  .benefits-list {
+    max-width: 1110px;
+    margin: 0;
+  }
+
+  .benefits-item {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .benefits-img {
+    width: 540px;
+    height: 500px;
+    margin: 0;
+    order: 2;
+  }
+
+  .benefits-item-wrap {
+    order: 1;
+  }
+
+  .benefits-text,
+  .management-text {
+    max-width: 486px;
+  }
+
+  .support-img {
+    order: 1;
+  }
+
+  .support-wrap {
+    order: 2;
+  }
+
+  .support-item::before {
+  }
+}
+/*============================== /DESKTOP ==============================*/
 /*============================== /BENEFITS STYLES ==============================*/
 
 /*========================== PROCESS SECTION STYLES ===========================*/
+/*============================== MOBILE ==============================*/
 .process-main-title {
   margin-bottom: 8px;
 }
@@ -463,9 +641,8 @@ textarea {
   display: flex;
   flex-direction: column;
   gap: 32px;
-  width: 348px;
-  margin: 0 auto;
-  margin-bottom: 32px;
+  max-width: 348px;
+  margin: 0 auto 32px;
 }
 
 .process-item {
@@ -480,29 +657,86 @@ textarea {
   text-align: center;
   color: #2f281e;
   border-radius: 35px;
-  max-width: 220px;
-  padding: 12px 24px;
+  width: 241px;
+  height: 65px;
+  padding: 15px 22px;
   box-shadow: 2px 2px 10px 0 rgba(23, 58, 86, 0.15);
 }
 
 .process-btn {
   font-weight: 700;
   font-size: 16px;
-  color: #fff;
-  border: none;
+  color: #02897a;
+  border: 1px solid #bcd0e5;
   border-radius: 4px;
   width: 216px;
   height: 53px;
-  background-color: #02897a;
+  background-color: #ffffff;
   display: block;
   margin: 0 auto;
-  transition: background-color 1200ms cubic-bezier(0.19, 1, 0.22, 1);
+  transition: background-color 1200ms cubic-bezier(0.19, 1, 0.22, 1),
+    color 1200ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .process-btn:hover,
 .process-btn:focus {
-  background-color: #028910;
+  background-color: #02897a;
+  color: #ffffff;
 }
+/*============================== /MOBILE ==============================*/
+/*============================== DESKTOP ==============================*/
+@media screen and (min-width: 1150px) {
+  .process-main-title {
+    margin-bottom: 25px;
+  }
+
+  .process-main-text {
+    max-width: 542px;
+    margin: 0 auto 40px;
+  }
+
+  .process-list {
+    max-width: 916px;
+    margin: 0 auto 50px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 100px;
+    row-gap: 25px;
+  }
+
+  .process-item {
+    width: calc((100% - 100px) / 2);
+    column-gap: 10px;
+  }
+
+  .process-item:nth-child(1) {
+    order: 1;
+  }
+
+  .process-item:nth-child(2) {
+    order: 3;
+  }
+
+  .process-item:nth-child(3) {
+    order: 4;
+  }
+
+  .process-item:nth-child(4) {
+    order: 2;
+  }
+
+  .process-img {
+    width: 98px;
+    height: 98px;
+  }
+
+  .process-text {
+    width: 281px;
+    height: 50px;
+    padding: 16px 15px;
+  }
+}
+/*============================== /DESKTOP ==============================*/
 /*========================== /PROCESS SECTION STYLES ===========================*/
 
 /*========================== STRATEGIES SECTION STYLES ===========================*/
@@ -909,7 +1143,7 @@ textarea {
   display: block;
   background-color: transparent;
   padding-left: 42px;
-  transition: border 250ms cubic-bezier(0.19, 1, 0.22, 1);
+  transition: border 1200ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .footer-input::placeholder {
@@ -918,7 +1152,7 @@ textarea {
 }
 
 .footer-input:focus {
-  border: 2px solid #02897a;
+  border: 1px solid #02897a;
 }
 
 .phone-input-icon {
@@ -926,7 +1160,8 @@ textarea {
   top: 50%;
   transform: translateY(-50%);
   left: 12px;
-  transition: fill 250ms cubic-bezier(0.19, 1, 0.22, 1);
+  fill: #bcd0e5;
+  transition: fill 1200ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .footer-input:focus + .phone-input-icon {
