--- a/css/styles.css
+++ b/css/styles.css
@@ -740,6 +740,7 @@ textarea {
 /*========================== /PROCESS SECTION STYLES ===========================*/
 
 /*========================== STRATEGIES SECTION STYLES ===========================*/
+/*============================== MOBILE ==============================*/
 .strategies-main-title {
   font-size: 34px;
   margin-bottom: 8px;
@@ -784,9 +785,49 @@ textarea {
 .green-title {
   color: #02897a;
 }
+/*============================== /MOBILE ==============================*/
+/*============================== DESKTOP ==============================*/
+@media screen and (min-width: 1150px) {
+  .strategies-main-title {
+    text-align: left;
+    margin-bottom: 10px;
+  }
+
+  .strategies-main-text {
+    text-align: left;
+    max-width: 465px;
+  }
+  .strategies-list {
+    max-width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 30px;
+  }
+
+  .strategies-item {
+    width: calc((100% - 60px) / 3);
+    border: 1px solid #dedede;
+    border-radius: 8px;
+  }
+
+  .strategies-img {
+    margin-bottom: 0;
+  }
+
+  .strategies-item-wrap {
+    padding: 24px 27px 40px;
+  }
+}
+/*============================== /DESKTOP ==============================*/
 /*========================== /STRATEGIES SECTION STYLES ===========================*/
 
 /*======================= PRICE SECTION STYLES ========================*/
+/*============================== MOBILE ==============================*/
+.price-main-title {
+  font-size: 34px;
+  margin-bottom: 8px;
+}
+
 .price-main-text {
   font-weight: 500;
   font-size: 16px;
@@ -935,9 +976,33 @@ textarea {
   background-color: #028910;
   color: #ffffff;
 }
+/*============================== /MOBILE ==============================*/
+/*============================== DESKTOP ==============================*/
+@media screen and (min-width: 1150px) {
+  .price-main-title {
+    margin-bottom: 10px;
+  }
+
+  .price-main-text {
+    margin-bottom: 40px;
+  }
+
+  .price-list {
+    max-width: 100%;
+    flex-direction: row;
+    column-gap: 72px;
+    flex-wrap: wrap;
+  }
+
+  .price-item {
+    width: calc((100% - 144px) / 3);
+  }
+}
+/*============================== /DESKTOP ==============================*/
 /*======================= /PRICE SECTION STYLES ========================*/
 
 /*========================== REVIEW SECTION ==========================*/
+/*============================== MOBILE ==============================*/
 .review-title {
   font-size: 34px;
   line-height: 1.7;
@@ -999,9 +1064,34 @@ textarea {
   letter-spacing: 0.01em;
   color: #252b42;
 }
+/*============================== /MOBILE ==============================*/
+/*============================== DESKTOP ==============================*/
+@media screen and (min-width: 1150px) {
+  .review-title {
+    margin-bottom: 10px;
+  }
+
+  .review-text {
+    max-width: 537px;
+    margin-bottom: 40px;
+  }
+
+  .review-list {
+    max-width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 64px;
+  }
+
+  .review-item {
+    width: calc((100% - 128px) / 3);
+  }
+}
+/*============================== /DESKTOP ==============================*/
 /*========================== /REVIEW SECTION ==========================*/
 
 /*========================== JOIN SECTION ==========================*/
+/*============================== MOBILE ==============================*/
 .join-container {
   background-color: #02897a;
   border-radius: 32px;
@@ -1045,9 +1135,40 @@ textarea {
   box-shadow: 0 4px 31px 0 rgba(0, 0, 0, 0.15);
   border-radius: 32px;
 }
+/*============================== /MOBILE ==============================*/
+/*============================== DESKTOP ==============================*/
+@media screen and (min-width: 1150px) {
+  .join-container {
+    max-width: 968px;
+    display: flex;
+    column-gap: 10px;
+  }
+
+  .join-title-wrap {
+    padding-top: 50px;
+    padding-left: 50px;
+  }
+
+  .join-title {
+    padding: 0;
+    max-width: 510px;
+    text-align: left;
+    margin-bottom: 46px;
+  }
+
+  .join-btn {
+    margin: 0;
+  }
+
+  .join-img {
+    padding-bottom: 10px;
+  }
+}
+/*============================== /DESKTOP ==============================*/
 /*========================== /JOIN SECTION ==========================*/
 
 /*========================== FOOTER ==========================*/
+/*============================== MOBILE ==============================*/
 .footer-logo {
   display: flex;
   align-items: center;
@@ -1197,4 +1318,49 @@ textarea {
   line-height: 1.88;
   text-align: center;
 }
+/*============================== /MOBILE ==============================*/
+/*============================== DESKTOP ==============================*/
+@media screen and (min-width: 1150px) {
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+
+  .footer-logo {
+    margin-bottom: 18px;
+  }
+
+  .footer-sm-list {
+    max-width: 152px;
+    justify-content: space-between;
+    margin: 0;
+  }
+
+  .footer-menu-list {
+    flex-direction: row;
+    align-items: start;
+    column-gap: 129px;
+    margin: 0;
+  }
+
+  .footer-form {
+    max-width: 325px;
+  }
+
+  .pnone-input-wrap {
+    margin-bottom: 25px;
+  }
+
+  .footer-label {
+    text-align: start;
+    margin-bottom: 30px;
+  }
+
+  .footer-submit-btn {
+    margin: 0;
+  }
+}
+
+/*============================== /DESKTOP ==============================*/
 /*========================== /FOOTER ==========================*/
