--- a/css/index.css
+++ b/css/index.css
@@ -88,7 +88,6 @@ textarea {
 /*============================== /COMMON STYLES ==============================*/
 
 /*============================== HEADER STYLES ==============================*/
-
 /*============================== MOBILE STYLES ==============================*/
 .menu-list,
 .header-login-btns {
@@ -225,7 +224,6 @@ textarea {
   }
 }
 /*============================== /DESKTOP STYLES ==============================*/
-
 /*============================== /HEADER STYLES ==============================*/
 
 /*============================== HERO STYLES ==============================*/
@@ -322,6 +320,7 @@ textarea {
   margin-right: 4px;
 }
 /*============================== /MOBILE ==============================*/
+
 /*============================== DESKTOP ==============================*/
 @media screen and (min-width: 1150px) {
   .hero-section {
@@ -445,6 +444,7 @@ textarea {
   color: #ffffff;
 }
 /*============================== /MOBILE ==============================*/
+
 /*============================== DESKTOP ==============================*/
 @media screen and (min-width: 1150px) {
   .product-main-title {
@@ -581,6 +581,7 @@ textarea {
   line-height: 1.63;
 }
 /*============================== /MOBILE ==============================*/
+
 /*============================== DESKTOP ==============================*/
 @media screen and (min-width: 1150px) {
   .benefits-list {
@@ -684,6 +685,7 @@ textarea {
   color: #ffffff;
 }
 /*============================== /MOBILE ==============================*/
+
 /*============================== DESKTOP ==============================*/
 @media screen and (min-width: 1150px) {
   .process-main-title {
@@ -786,6 +788,7 @@ textarea {
   color: #02897a;
 }
 /*============================== /MOBILE ==============================*/
+
 /*============================== DESKTOP ==============================*/
 @media screen and (min-width: 1150px) {
   .strategies-main-title {
@@ -977,6 +980,7 @@ textarea {
   color: #ffffff;
 }
 /*============================== /MOBILE ==============================*/
+
 /*============================== DESKTOP ==============================*/
 @media screen and (min-width: 1150px) {
   .price-main-title {
@@ -1065,6 +1069,7 @@ textarea {
   color: #252b42;
 }
 /*============================== /MOBILE ==============================*/
+
 /*============================== DESKTOP ==============================*/
 @media screen and (min-width: 1150px) {
   .review-title {
@@ -1136,6 +1141,7 @@ textarea {
   border-radius: 32px;
 }
 /*============================== /MOBILE ==============================*/
+
 /*============================== DESKTOP ==============================*/
 @media screen and (min-width: 1150px) {
   .join-container {
@@ -1293,24 +1299,22 @@ textarea {
   font-weight: 700;
   font-size: 16px;
   text-align: center;
-  color: #fff;
-  border: none;
+  color: #02897a;
+  border: 1px solid #bcd0e5;
   border-radius: 4px;
   min-width: 131px;
   height: 39px;
-  background-color: #02897a;
+  background-color: #ffffff;
   display: block;
   margin: 0 auto 44px;
   transition: background-color 1200ms cubic-bezier(0.19, 1, 0.22, 1),
-    color 1200ms cubic-bezier(0.19, 1, 0.22, 1),
-    border 1200ms cubic-bezier(0.19, 1, 0.22, 1);
+    color 1200ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .footer-submit-btn:hover,
 .footer-submit-btn:focus {
-  background-color: #f8f5f5;
-  border: 1px solid #02897a;
-  color: #02897a;
+  background-color: #02897a;
+  color: #ffffff;
 }
 
 .footer-text {
@@ -1319,6 +1323,7 @@ textarea {
   text-align: center;
 }
 /*============================== /MOBILE ==============================*/
+
 /*============================== DESKTOP ==============================*/
 @media screen and (min-width: 1150px) {
   .footer-container {
