--- a/css/prising.css
+++ b/css/prising.css
@@ -508,6 +508,91 @@ textarea {
 /*============================== /DESKTOP ==============================*/
 /*========================= /ENTERPRISE SECTION =========================*/
 
+/*========================= EFFECTS SECTION =========================*/
+/*============================== MOBILE ==============================*/
+.effects-title {
+  font-weight: 700;
+  font-size: 32px;
+  text-align: center;
+  max-width: 342px;
+  margin-bottom: 33px;
+}
+
+.effects-img {
+  margin-bottom: 32px;
+}
+
+.effects-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.effects-item:nth-child(1) .effects-list-title::before {
+  background-image: url(../images/prising/effects-icon-1.svg);
+}
+
+.effects-item:nth-child(2) .effects-list-title::before {
+  background-image: url(../images/prising/effects-icon-2.svg);
+}
+
+.effects-item:nth-child(3) .effects-list-title::before {
+  background-image: url(../images/prising/effects-icon-3.svg);
+}
+
+.effects-list-title::before {
+  display: block;
+  width: 50px;
+  height: 50px;
+  content: '';
+  border-radius: 50%;
+  background-color: #f4f5f7;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.effects-list-title {
+  font-weight: 600;
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 16px;
+}
+
+.effects-list-text {
+  line-height: 1.75;
+}
+/*============================== /MOBILE ==============================*/
+
+/*============================== DESKTOP ==============================*/
+@media screen and (min-width: 1158px) {
+  .effects-title {
+    font-size: 34px;
+    max-width: 880px;
+    margin: 0 auto 56px;
+  }
+
+  .effects-img-list-wrap {
+    display: flex;
+    column-gap: 60px;
+  }
+  .effects-img {
+    width: 528px;
+    height: 392px;
+    margin-bottom: 0;
+  }
+  .effects-list {
+  }
+  .effects-item {
+  }
+  .effects-list-title {
+  }
+  .effects-list-text {
+  }
+}
+
+/*============================== /DESKTOP ==============================*/
+/*========================= /EFECTS SECTION =========================*/
+
 /*========================== JOIN SECTION ==========================*/
 /*============================== MOBILE ==============================*/
 .join-container {
@@ -782,3 +867,111 @@ textarea {
 
 /*============================== /DESKTOP ==============================*/
 /*========================== /FOOTER ==========================*/
+
+/*========================== MOBILE MENU =====================*/
+.menu-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+
+  transition: opacity 250ms linear, visibility 250ms linear;
+}
+
+.is-open {
+  opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 75%;
+  height: 100%;
+  background-color: #ffffff;
+  padding: 100px 30px 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.mobile-close-btn {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  width: 40px;
+  height: 40px;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: fill 250ms linear;
+}
+
+.mobile-close-btn:hover,
+.mobile-close-btn:focus {
+  fill: #028910;
+}
+
+.mobile-nav-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.mobile-nav-link {
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 1.75;
+  transition: color 250ms linear;
+}
+
+.mobile-nav-link:hover,
+.mobile-nav-link:focus {
+  color: #02897a;
+}
+
+.current {
+  font-weight: 600;
+}
+
+.mobile-sm-list {
+  display: flex;
+  justify-content: space-between;
+  margin-top: auto;
+}
+
+.mobile-sm-link {
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  background-color: #02897a;
+  fill: none;
+  stroke: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms linear, stroke 250ms linear,
+    border 250ms linear;
+}
+
+.mobile-sm-link:hover,
+.mobile-sm-link:focus {
+  stroke: #02897a;
+  background-color: #ffffff;
+  border: 3px solid #02897a;
+}
+
+@media screen and (min-width: 1158px) {
+  .menu-backdrop {
+    display: none;
+  }
+}
+/*========================== /MOBILE MENU =====================*/
