--- a/css/prising.css
+++ b/css/prising.css
@@ -575,23 +575,107 @@ textarea {
     display: flex;
     column-gap: 60px;
   }
+
   .effects-img {
     width: 528px;
     height: 392px;
     margin-bottom: 0;
   }
-  .effects-list {
-  }
-  .effects-item {
-  }
-  .effects-list-title {
-  }
-  .effects-list-text {
-  }
 }
 
 /*============================== /DESKTOP ==============================*/
 /*========================= /EFECTS SECTION =========================*/
+
+/*========================== QUESTION SECTION ==========================*/
+/*============================== MOBILE ==============================*/
+.question-title {
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.question-text {
+  font-size: 18px;
+  text-align: center;
+  max-width: 326px;
+  margin: 0 auto 30px;
+}
+
+.question-list {
+  max-width: 345px;
+}
+
+.question-item {
+  border-bottom: 1px solid #e7e7e7;
+  padding-bottom: 22px;
+}
+
+.question-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.question-list-title {
+  font-weight: 500;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.question-list-title::before {
+  display: block;
+  content: '';
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  flex-shrink: 0;
+  background-image: url(../images/prising/plus.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.question-item:nth-child(2) .question-list-title::before {
+  background-image: url(../images/prising/minus.svg);
+}
+
+.question-list-text {
+  margin-top: 16px;
+}
+/*============================== /MOBILE ==============================*/
+
+/*============================== DESKTOP ==============================*/
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 960px;
+  }
+
+  .question-title {
+    font-size: 34px;
+    max-width: 100%;
+    margin-bottom: 8px;
+  }
+
+  .question-text {
+    max-width: 100%;
+    margin-bottom: 50px;
+  }
+  .question-list {
+    max-width: 100%;
+  }
+  .question-item {
+  }
+
+  .question-item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+  .question-list-title {
+  }
+  .question-list-text {
+  }
+}
+/*============================== /DESKTOP ==============================*/
+/*========================== /QUESTION SECTION ==========================*/
 
 /*========================== JOIN SECTION ==========================*/
 /*============================== MOBILE ==============================*/
